@@ -1,9 +1,18 @@
 ubiquity-slideshow-ubuntu (9) UNRELEASED; urgency=low
 
+  [ Evan Dandrea ]
   * The version of Firefox shipped with Ubuntu 9.10 is 3.5, not 3.0
     (LP: #442832).
 
- -- Evan Dandrea <evand@ubuntu.com>  Thu, 08 Oct 2009 00:39:24 +0100
+  [ Dylan McCall ]
+  * Adding support for right-to-left languages (LP: #446989).
+  * When #rtl is appended to URL, index.html will load the rtl.css
+    stylesheet via Javascript.
+  * Added link/rtl.css and link/bullet-point.rtl.png, which are
+    responsible for little hacks to get right-to-left languages
+    looking right.
+
+ -- Dylan McCall <dylan@dylan-laptop>  Fri, 09 Oct 2009 16:24:37 -0700
 
 ubiquity-slideshow-ubuntu (8) karmic; urgency=low
 
